<resources>
    <string name="app_name">BOOKSTORE</string>
    <string name="register">Đăng kí</string>
    <string name="login">Đăng nhập</string>
    <string name="username">Tên đăng nhập</string>
    <string name="email">Email</string>
    <string name="password">Mật khẩu</string>
    <string name="thongbao">Bạn chưa có tài khoản?</string>
    <string name="searchproduct">Search Product</string>
    <string name="mo">Mở</string>
    <string name="dong">Đóng</string>
    <string name="title_activity_thong_tin_app">Map</string>
    <string name="signupforfree">Đăng kí miễn phí</string>
    <string name="giosach">Giỏ sách</string>
    <string name="thongtinapp">Thông tin</string>
    <string name="dangxuat">Đăng xuất</string>
    <string name="mybook">Sách đã thuê</string>
    <string name="chuatra">Chưa trả</string>
    <string name="giohang">Giỏ hàng</string>
    <string name="giohangEmpty">Giỏ hàng rỗng</string>
    <string name="tongcong">Tổng cộng</string>
    <string name="thanhtoan">THANH TOÁN</string>
    <string name="tieptucmuahang">TIẾP TỤC MUA HÀNG</string>
    <string name="kiemtrasachmuon">Kiểm tra sách mượn</string>
    <string name="thongtinsp">Thông tin sản phẩm và nhận xét</string>
    <string name="chitietsp">Chi tiết sản phẩm</string>
    <string name="danhgia">Đánh giá và nhận xét</string>
    <string name="vietdanhgia">Viết đánh giá</string>
    <string name="xemtatcanhanxet">Xem tất cả nhận xét</string>
    <string name="thuesach">THUÊ SÁCH</string>
    <string name="xoasp">Xác nhận xóa sản phẩm</string>
    <string name="messageXoaSp">Bạn có chắc chắn muốn xóa sản phẩm này?</string>
    <string name="yes">Có</string>
    <string name="no">Không</string>
    <string name="ksp">Bạn không có sản phẩm để thanh toán.Vui lòng thêm sản phẩm!</string>
    <string name="themtccart">Thêm thành công giỏ hàng</string>
    <string name="thongbaothue">Thông báo</string>
    <string name="xacnhanthue">Bạn có muốn thuê sách này không?</string>
    <string name="sachchuatra">Sách chưa trả!</string>
    <string name="sachduocmuon">Sách được phép mượn!</string>
    <string name="thuethanhcong">Thuê sách thành công!</string>
    <string name="thuethatbai">Thuê sách thất bại!</string>
    <string name="loginfail">Đăng nhập thất bại!</string>
    <string name="ngonngu">Ngôn ngữ</string>
    <string name="chonngongu">Chọn ngôn ngữ</string>
    <string name="dkithanhcong">Đăng kí thành công</string>
    <string name="dkithatbai">Đăng kí thất bại!Email này đã tồn tại</string>
    <string name="chuanhaptt">Email hoặc mật khẩu chưa nhập!</string>
</resources>
