<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="@drawable/books"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:aandroid="http://schemas.android.com/tools">
    <LinearLayout


        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/timg"
        android:orientation="vertical">
        <LinearLayout
            android:layout_marginTop="80dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_gravity="center"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:background="@drawable/logo"
               android:layout_marginBottom="20dp"
                />
            <TextView
                android:singleLine="true"
                android:textSize="@dimen/sizeLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/register"
                android:textColor="@color/colorChutRANG" />
            <android.support.design.widget.TextInputLayout
                android:textColorHint="#ADCCE2"
                android:textColor="#ADCCE2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.example.dell.restful_json.CustomView.CleanEditText
                    android:textSize="16dp"
                    android:id="@+id/edtUsernameDK"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/username"
                    android:textColorHint="#ADCCE2"
                    android:textColor="#ADCCE2"
                    android:layout_marginLeft="22dp"
                    android:inputType="text"
                    android:background="#0000"
                    android:padding="16dp"
                    android:layout_marginRight="35dp"/>
            </android.support.design.widget.TextInputLayout>

            <View
                android:layout_width="match_parent"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_height="1dp"
                android:background="#ADCCE2" />
            <android.support.design.widget.TextInputLayout
                android:layout_marginTop="10dp"
                android:textColorHint="#ADCCE2"
                android:textColor="#ADCCE2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.example.dell.restful_json.CustomView.CleanEditText
                    android:textSize="16dp"
                    android:id="@+id/edtEmaailDK"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:textColorHint="#ADCCE2"
                    android:textColor="#ADCCE2"
                    android:layout_marginLeft="22dp"
                    android:inputType="text"
                    android:background="#0000"
                    android:padding="16dp"
                    android:layout_marginRight="35dp"/>
            </android.support.design.widget.TextInputLayout>

            <View
                android:layout_width="match_parent"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_height="1dp"
                android:background="#ADCCE2" />

            <android.support.design.widget.TextInputLayout
                android:layout_marginTop="10dp"
                android:textColor="#ADCCE2"
                android:textColorHint="#ADCCE2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.example.dell.restful_json.CustomView.PasswordEdittext
                    android:textSize="16dp"
                    android:id="@+id/edtPassDK"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:textColorHint="#ADCCE2"
                    android:layout_marginLeft="22dp"
                    android:inputType="textPassword"
                    android:maxLength="12"
                    android:textColor="#ADCCE2"
                    android:background="#0000"
                    android:padding="16dp"
                    android:layout_marginRight="35dp"/>
            </android.support.design.widget.TextInputLayout>

            <View
                android:layout_width="match_parent"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_height="1dp"
                android:layout_marginBottom="10dp"
                android:background="#ADCCE2"/>
            <Button
                android:id="@+id/btnRegisterDK"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/angle"
                android:text="@string/register"
                android:textSize="16dp"
                android:textColor="#fff"
                android:gravity="center"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:padding="16dp"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="28dp"
                android:layout_marginTop="32dp"
                />
        </LinearLayout>




    </LinearLayout>
</RelativeLayout>